Adiciona seção de venda lançamentos ao HTML

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Nome cliente!</p>
             </a>
 
-            <div class="relative">
+            <div>
                 <input type="checkbox" id="menu" /> <label for="menu"></label>
 
                 <ul>
@@ -51,6 +51,70 @@
                 </ul>
             </div>
         </section>
+        <main>
+            <!-- Section SALE -->
+            <section>
+                <img src="./assets/cadeira.svg" alt="imagem cadeira com roupas">
+                <div>
+                    <p>SUPER <span>SALE</span></p>
+                    <p>ITENS
+                        SELECIONADOS COM
+                        ATÉ
+                        <br /><span>50%OFF</span>
+                    </p>
+                </div>
+            </section>
+            <!-- Section Lançamentos -->
+            <section class="w-full">
+                <div class="grid grid-cols-2 gap-4 items-center justify-center mb-5 mt-24 max-w-full">
+                    <h2 class="text-xl font-bold">Lançamentos</h2>
+                    <p class="text-sm font-bold">Ver mais</p>
+                </div>
+
+                <!-- Slider main container -->
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide">
+                            <span>NOVO</span>
+                            <img src="./assets/anuncio.svg" alt="">
+                            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            </h3>
+                            <div>
+                                <p> R$ 100,00</p>
+                                <span>10%OFF</span>
+                            </div>
+
+                            <p></p>
+                            <p>Ou em até <span>10x de R$ 7,90</span></p>
+
+                            <button>Comprar</button>
+                        </div>
+                        <div>
+                            <span>NOVO</span>
+                            <img src="./assets/anuncio.svg" alt="">
+                            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            </h3>
+                            <div>
+                                <p> R$ 100,00</p>
+                                <span>10%OFF</span>
+                            </div>
+
+                            <p>R$ 79,90</p>
+                            <p>Ou em até <span>10x de R$ 7,90</span></p>
+
+                            <button>Comprar</button>
+                        </div>
+
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev"><img src="./assets/seta-swipper.svg" alt=""></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+
+                    <div class="swiper-pagination-bullets"></div>
+
+            </section>
+
     </body>
 
 </html>
