--- a/index.html
+++ b/index.html
@@ -8,113 +8,159 @@
 </head>
 
 <body>
+    <header>
+        <div>
+            <p>Ganhe <span>R$10,00</span> de
+                desconto no seu primeiro pedido. Utilize o cupom <span>DESCONTO10</span>
+            </p>
+        </div>
+        <div>
+            <button>
+                <img src="./assets/menu.svg" alt="Menu">
+            </button>
+            <img src="./assets/logo-avanti.svg" alt="logo-avanti">
+            <a href="#"><img src="/assets/sacola.svg" alt="carrinho"><img src="./assets/compras-sacola.svg"
+                    alt="numero de compras"></a>
+        </div>
+        <input type="text" placeholder="Digite aqui o que você procura">
 
-    <body>
-        <header>
+        <a href="#"><img src="/assets/usuario.svg" alt="usuario">
+            <p>Olá, <br>
+                Nome cliente!</p>
+        </a>
+    </header>
+
+    <div>
+        <input type="checkbox" id="menu" /> <label for="menu"></label>
+
+        <ul>
+            <li>Todas as Categorias</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+            <li>Departamento</li>
+
+        </ul>
+    </div>
+
+    <main>
+        <!-- Section SALE -->
+        <section>
+            <img src="./assets/cadeira.svg" alt="imagem cadeira com roupas">
             <div>
-                <p>Ganhe <span>R$10,00</span> de
-                    desconto no seu primeiro pedido. Utilize o cupom <span>DESCONTO10</span>
+                <p>SUPER <span>SALE</span></p>
+                <p>ITENS
+                    SELECIONADOS COM
+                    ATÉ
+                    <br /><span>50%OFF</span>
                 </p>
             </div>
-        </header>
-
+        </section>
+        <!-- Section Lançamentos -->
         <section>
             <div>
-                <button>
-                    <img src="./assets/menu.svg" alt="Menu">
-                </button>
-                <img src="./assets/logo-avanti.svg" alt="logo-avanti">
-                <a href="#"><img src="/assets/sacola.svg" alt="carrinho"><img src="./assets/compras-sacola.svg"
-                        alt="numero de compras"></a>
+                <h2>Lançamentos</h2>
+                <p>Ver mais</p>
             </div>
-            <input type="text" placeholder="Digite aqui o que você procura">
 
-            <a href="#"><img src="/assets/usuario.svg" alt="usuario">
-                <p>Olá, <br>
-                    Nome cliente!</p>
-            </a>
-
-            <div>
-                <input type="checkbox" id="menu" /> <label for="menu"></label>
-
-                <ul>
-                    <li>Todas as Categorias</li>
-                    <li>Departamento</li>
-                    <li>Departamento</li>
-                    <li>Departamento</li>
-                    <li>Departamento</li>
-                    <li>Departamento</li>
-                    <li>Departamento</li>
-                    <li>Departamento</li>
-                    <li>Departamento</li>
-
-                </ul>
-            </div>
-        </section>
-        <main>
-            <!-- Section SALE -->
-            <section>
-                <img src="./assets/cadeira.svg" alt="imagem cadeira com roupas">
-                <div>
-                    <p>SUPER <span>SALE</span></p>
-                    <p>ITENS
-                        SELECIONADOS COM
-                        ATÉ
-                        <br /><span>50%OFF</span>
-                    </p>
-                </div>
-            </section>
-            <!-- Section Lançamentos -->
-            <section class="w-full">
-                <div class="grid grid-cols-2 gap-4 items-center justify-center mb-5 mt-24 max-w-full">
-                    <h2 class="text-xl font-bold">Lançamentos</h2>
-                    <p class="text-sm font-bold">Ver mais</p>
-                </div>
-
-                <!-- Slider main container -->
-                <div class="swiper">
-                    <div class="swiper-wrapper">
-                        <!-- Slides -->
-                        <div class="swiper-slide">
-                            <span>NOVO</span>
-                            <img src="./assets/anuncio.svg" alt="">
-                            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            </h3>
-                            <div>
-                                <p> R$ 100,00</p>
-                                <span>10%OFF</span>
-                            </div>
-
-                            <p></p>
-                            <p>Ou em até <span>10x de R$ 7,90</span></p>
-
-                            <button>Comprar</button>
-                        </div>
+            <!-- Slider main container -->
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <span>NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="">
+                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        </h3>
                         <div>
-                            <span>NOVO</span>
-                            <img src="./assets/anuncio.svg" alt="">
-                            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            </h3>
-                            <div>
-                                <p> R$ 100,00</p>
-                                <span>10%OFF</span>
-                            </div>
-
-                            <p>R$ 79,90</p>
-                            <p>Ou em até <span>10x de R$ 7,90</span></p>
-
-                            <button>Comprar</button>
+                            <p> R$ 100,00</p>
+                            <span>10%OFF</span>
                         </div>
 
-                        <!-- If we need navigation buttons -->
-                        <div class="swiper-button-prev"><img src="./assets/seta-swipper.svg" alt=""></div>
-                        <div class="swiper-button-next"></div>
+                        <p></p>
+                        <p>Ou em até <span>10x de R$ 7,90</span></p>
+
+                        <button>Comprar</button>
+                    </div>
+                    <div>
+                        <span>NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="">
+                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        </h3>
+                        <div>
+                            <p> R$ 100,00</p>
+                            <span>10%OFF</span>
+                        </div>
+
+                        <p>R$ 79,90</p>
+                        <p>Ou em até <span>10x de R$ 7,90</span></p>
+
+                        <button>Comprar</button>
                     </div>
 
-                    <div class="swiper-pagination-bullets"></div>
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"><img src="./assets/seta-swipper.svg" alt=""></div>
+                    <div class="swiper-button-next"></div>
+                </div>
 
-            </section>
+                <div class="swiper-pagination-bullets"></div>
 
-    </body>
+        </section>
+        <!--SECTION PRODUTO DESTAQUE-->
+        <section>
+            <div>
+                <img src="./assets/xicara.svg" alt="imagem xicara com o logo avanti">
+            </div>
+            <div>
+                <h4>LOREM IPSUM</h4>
+                <p>Duis consectetur metus nec lacus auctor dignissim. Mauris vitae finibus dui.
+                    Mauris
+                    laoreet lacus ut
+                    eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
+                    pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget
+                    lacinia.
+                    Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
+                    a
+                    libero commodo egestas efficitur id augue.</p>
+                <p>Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
+                    finibus dui. Mauris
+                    laoreet lacus ut
+                    eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
+                    pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget
+                    lacinia.
+                    Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
+                    a
+                    libero commodo egestas efficitur id augue. </p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h4>LOREM IPSUM</h4>
+                <div>
+                    <img src="./assets/pin-localização.svg" alt="">
+                    <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                </div>
+                <div>
+                    <img src="./assets/pin-localização.svg" alt="">
+                    <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                </div>
+                <div>
+                    <img src="./assets/pin-localização.svg" alt="">
+                    <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/segundo banner.svg" alt="">
+            </div>
+        </section>
+
+</body>
 
 </html>
