Adiciona seção do form de newsletter e footer

--- a/index.html
+++ b/index.html
@@ -74,14 +74,13 @@
                     <div class="swiper-slide">
                         <span>NOVO</span>
                         <img src="./assets/anuncio.svg" alt="">
-                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        </h3>
+                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
                         <div>
                             <p> R$ 100,00</p>
                             <span>10%OFF</span>
                         </div>
 
-                        <p></p>
+                        <p>R$ 79,90</p>
                         <p>Ou em até <span>10x de R$ 7,90</span></p>
 
                         <button>Comprar</button>
@@ -134,7 +133,7 @@
                     lacinia.
                     Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
                     a
-                    libero commodo egestas efficitur id augue. </p>
+                    libero commodo egestas efficitur id augue.</p>
             </div>
         </section>
         <section>
@@ -160,6 +159,107 @@
                 <img src="./assets/segundo banner.svg" alt="">
             </div>
         </section>
+        <section>
+            <img src="./assets/img-rodape.svg" alt="">
+            <p>
+                Entre em contato
+                conosco e
+                verifique a disponibilidade para sua região!
+            </p>
+        </section>
+    </main>
+    <!-- Section newsletter -->
+    <section>
+        <h3>
+            Cadastre-se na nossa <span>newsletter</span>
+        </h3>
+        <form>
+            <input type="text" placeholder="Digite seu nome">
+            <input type="email" placeholder="Digite seu e-mail">
+            <div>
+                <input type="checkbox" id="privacy">
+                <label for="privacy">Estou de acordo com a <span>Política de
+                        Privacidade</span></label>
+            </div>
+            <button>
+                Cadastrar
+            </button>
+        </form>
+        <footer>
+            <section>
+                <div>
+                    <div>
+                        <img src="./assets/logo-avanti.svg" alt="">
+                        <ul>
+                            <li>
+                                <a href="#"><img src="./assets/logo-instagram.svg" alt="logo instagram"></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="./assets/logo-facebook.svg" alt="logo facebook"></a>
+                            </li>
+                            <li>
+                                <a href="#"><img src="./assets/logo-youtube.svg" alt="logo youtube"></a>
+                            </li>
+                            <li><a href="#"><img src="./assets/logo-tiktok.svg" alt=""></a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <h5>Institucional</h5>
+                            </li>
+                            <li>
+                                <h5>Central de ajuda</h5>
+                            </li>
+                            <li>
+                                <h5">Atendimento</h5>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <img src="./assets/formas de pgto/amex.svg" alt="">
+                    <img src="./assets/formas de pgto/União 32.svg" alt="">
+                    <img src="./assets/formas de pgto/visa.svg" alt="">
+                    <img src="./assets/formas de pgto/hipercard.svg" alt="">
+                    <img src="./assets/formas de pgto/elo.svg" alt="">
+                    <img src="./assets/formas de pgto/b.svg" alt="">
+                    <img src="./assets/formas de pgto/paypal.svg" alt="">
+                    <img src="./assets/formas de pgto/União 39.svg" alt="">
+                    <img src="./assets/formas de pgto/boleto.svg" alt="">
+                </div>
+            </section>
+
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetuer
+                    adipiscing
+                    elit,
+                    sed diam
+                    nonummy
+                    nibh euismod tincidunt ut
+                    laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
+                    ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+                    dolor
+                    in
+                    hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at
+                    vero
+                    eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis
+                    dolore
+                    te
+                    feugait nulla facilisi.</p>
+                <ul>
+                    <li><img src="./assets/lets-encrypt.svg" alt=""></li>
+                    <li><img src="./assets/vtex-1.svg" alt=""></li>
+                    <li><img src="./assets/avanti.svg" alt=""></li>
+                    <li><img src="./assets/vtex.svg" alt=""></li>
+                </ul>
+            </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src=script.js></script>
+    </section>
+
+
 
 </body>
 
