Adiciona tags ao head, link fonte e tailwind

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Avanti</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -53,9 +60,7 @@
             <img src="./assets/cadeira.svg" alt="imagem cadeira com roupas">
             <div>
                 <p>SUPER <span>SALE</span></p>
-                <p>ITENS
-                    SELECIONADOS COM
-                    ATÉ
+                <p>ITENS SELECIONADOS COM ATÉ
                     <br /><span>50%OFF</span>
                 </p>
             </div>
@@ -88,8 +93,7 @@
                     <div>
                         <span>NOVO</span>
                         <img src="./assets/anuncio.svg" alt="">
-                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        </h3>
+                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h3>
                         <div>
                             <p> R$ 100,00</p>
                             <span>10%OFF</span>
@@ -137,27 +141,24 @@
             </div>
         </section>
         <section>
+
+            <h4>LOREM IPSUM</h4>
             <div>
-                <h4>LOREM IPSUM</h4>
-                <div>
-                    <img src="./assets/pin-localização.svg" alt="">
-                    <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
-                </div>
-                <div>
-                    <img src="./assets/pin-localização.svg" alt="">
-                    <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
-                </div>
-                <div>
-                    <img src="./assets/pin-localização.svg" alt="">
-                    <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
-                </div>
+                <img src="./assets/pin-localização.svg" alt="">
+                <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
             </div>
             <div>
-                <img src="./assets/segundo banner.svg" alt="">
+                <img src="./assets/pin-localização.svg" alt="">
+                <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
             </div>
+            <div>
+                <img src="./assets/pin-localização.svg" alt="">
+                <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+            </div>
+            <img src="./assets/segundo banner.svg" alt="">
         </section>
         <section>
             <img src="./assets/img-rodape.svg" alt="">
@@ -188,34 +189,32 @@
         <footer>
             <section>
                 <div>
-                    <div>
-                        <img src="./assets/logo-avanti.svg" alt="">
-                        <ul>
-                            <li>
-                                <a href="#"><img src="./assets/logo-instagram.svg" alt="logo instagram"></a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="./assets/logo-facebook.svg" alt="logo facebook"></a>
-                            </li>
-                            <li>
-                                <a href="#"><img src="./assets/logo-youtube.svg" alt="logo youtube"></a>
-                            </li>
-                            <li><a href="#"><img src="./assets/logo-tiktok.svg" alt=""></a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul>
-                            <li>
-                                <h5>Institucional</h5>
-                            </li>
-                            <li>
-                                <h5>Central de ajuda</h5>
-                            </li>
-                            <li>
-                                <h5">Atendimento</h5>
-                            </li>
-                        </ul>
-                    </div>
+                    <img src="./assets/logo-avanti.svg" alt="">
+                    <ul>
+                        <li>
+                            <a href="#"><img src="./assets/logo-instagram.svg" alt="logo instagram"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./assets/logo-facebook.svg" alt="logo facebook"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./assets/logo-youtube.svg" alt="logo youtube"></a>
+                        </li>
+                        <li><a href="#"><img src="./assets/logo-tiktok.svg" alt=""></a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                            <h5>Institucional</h5>
+                        </li>
+                        <li>
+                            <h5>Central de ajuda</h5>
+                        </li>
+                        <li>
+                            <h5">Atendimento</h5>
+                        </li>
+                    </ul>
                 </div>
                 <div>
                     <img src="./assets/formas de pgto/amex.svg" alt="">
@@ -258,9 +257,6 @@
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src=script.js></script>
     </section>
-
-
-
 </body>
 
 </html>
