Atualiza o estilo do cabeçalho e do campo de busca no HTML; adiciona configuração do Tailwind CSS

--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body style="font-family: 'Nunito Sans', sans-serif;" class="text-sm">
     <header>
         <div>
-            <p>Ganhe <span>R$10,00</span> de
-                desconto no seu primeiro pedido. Utilize o cupom <span>DESCONTO10</span>
+            <p class="bg-[#005CFF] text-[#FFFFFF] font-bold px-5 py-1 text-center">Ganhe <span
+                    class="italic bg-indigo-500">R$10,00</span> de
+                desconto no seu primeiro pedido. Utilize o cupom <span class="font-normal">DESCONTO10</span>
             </p>
         </div>
-        <div>
+        <div class="flex mx-4 mt-5 gap-16 justify-center">
             <button>
                 <img src="./assets/menu.svg" alt="Menu">
             </button>
             <img src="./assets/logo-avanti.svg" alt="logo-avanti">
-            <a href="#"><img src="/assets/sacola.svg" alt="carrinho"><img src="./assets/compras-sacola.svg"
-                    alt="numero de compras"></a>
+            <a href="#" class="relative inline-block">
+                <img src="/assets/sacola.svg" alt="carrinho"><img src="./assets/compras-sacola.svg"
+                    alt="numero de compras" class="absolute -top-1.5 -right-1.5 w-4 h-4"></a>
         </div>
-        <input type="text" placeholder="Digite aqui o que você procura">
+        <input type="text" placeholder="Digite aqui o que você procura"
+            class="border-2 border-gray-300 rounded-md bg-[url('/assets/lupa.svg')] bg-no-repeat bg-[length:20px] bg-[position:right_10px_center] placeholder-black font-bold py-2 pl-5 mt-9 mb-6 mx-4 w-5/6 w-full">
 
         <a href="#"><img src="/assets/usuario.svg" alt="usuario">
             <p>Olá, <br>
