--- a/index.html
+++ b/index.html
@@ -57,14 +57,18 @@
         </ul>
     </div>
 
-    <main>c
+    <main>
         <!-- Section SALE -->
-        <section class="flex bg-[#E7E7EA] items-center">
-            <img src="./assets/cadeiracortada.svg" alt="imagem cadeira com roupas">
-            <div>
-                <p class="text-[40px]">SUPER<span class="font-bold">SALE</span></p>
-                <p class="text-xs- text-[#005CFF] font-bold">ITENS SELECIONADOS COM ATÉ
-                    <br /><span class="text-[32px]">50%OFF</span>
+        <section class="flex bg-[#e8e9eb] items-center justify-center overflow-hidden">
+            <img src="./assets/cadeira.png" alt="cadeira com roupas"
+                class="w-56 h-72 object-cover scale-150 -translate-x-14 -translate-y-10">
+            <div class="flex flex-col my-16 text-center gap-3">
+                <p class="text-4xl">
+                    <span class="block sm:inline font-bold">SUPER</span> <span>SALE</span>
+                </p>
+                <p style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);" class="text-xs text-[#005CFF] font-bold">ITENS
+                    SELECIONADOS COM ATÉ
+                    <br /><span class="text-3xl">50%OFF</span>
                 </p>
             </div>
         </section>
