--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
 </head>
 
-<body style="font-family: 'Nunito Sans', sans-serif;" class="text-sm w-dvw">
+<body style="font-family: 'Nunito Sans', sans-serif;" class="text-sm">
     <header>
         <div>
             <p class="bg-[#005CFF] text-[#FFFFFF] font-bold px-5 py-1 text-center">Ganhe <span
@@ -59,7 +59,7 @@
 
     <main>
         <!-- Section SALE -->
-        <section class="flex bg-[#e8e9eb] items-center justify-center overflow-hidden">
+        <section class="flex bg-[#e8e9eb] items-center justify-center overflow-hidden mb-14">
             <img src="./assets/cadeira.png" alt="cadeira com roupas"
                 class="w-56 h-72 object-cover scale-150 -translate-x-14 -translate-y-10">
             <div class="flex flex-col my-16 text-center gap-3">
@@ -74,45 +74,63 @@
         </section>
         <!-- Section Lançamentos -->
         <section>
-            <div>
-                <h2>Lançamentos</h2>
-                <p>Ver mais</p>
+            <div class="flex justify-between items-center m-4">
+                <h2 class="text-base font-bold">Lançamentos</h2>
+                <p class="underline font-bold">Ver mais</p>
             </div>
 
             <!-- Slider main container -->
-            <div class="swiper">
-                <div class="swiper-wrapper">
+            <div class="swiper ">
+                <div class="swiper-wrapper mx-4">
                     <!-- Slides -->
-                    <div class="swiper-slide">
-                        <span>NOVO</span>
-                        <img src="./assets/anuncio.svg" alt="">
-                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
-                        <div>
-                            <p> R$ 100,00</p>
-                            <span>10%OFF</span>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
                         </div>
 
-                        <p>R$ 79,90</p>
-                        <p>Ou em até <span>10x de R$ 7,90</span></p>
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
 
-                        <button>Comprar</button>
+                        <button
+                            class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
                     </div>
-                    <div>
-                        <span>NOVO</span>
-                        <img src="./assets/anuncio.svg" alt="">
-                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h3>
-                        <div>
-                            <p> R$ 100,00</p>
-                            <span>10%OFF</span>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
                         </div>
 
-                        <p>R$ 79,90</p>
-                        <p>Ou em até <span>10x de R$ 7,90</span></p>
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
 
-                        <button>Comprar</button>
+                        <button
+                            class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
                     </div>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
+                        </div>
 
-                    <!-- If we need navigation buttons -->
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
+
+                        <button
+                            class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
+                    </div> <!-- If we need navigation buttons -->
                     <div class="swiper-button-prev"><img src="./assets/seta-swipper.svg" alt=""></div>
                     <div class="swiper-button-next"></div>
                 </div>
