Melhora a acessibilidade e o estilo do swiper; atualiza imagens e textos na seção de produtos

--- a/index.html
+++ b/index.html
@@ -132,65 +132,98 @@
                             class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
                     </div> <!-- If we need navigation buttons -->
                     <div class="swiper-button-prev"><img src="./assets/seta-swipper.svg" alt=""></div>
-                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-next"><img src="./assets/seta-swipper.svg" alt=""></div>
                 </div>
 
-                <div class="swiper-pagination-bullets"></div>
+                <div class="swiper-pagination-bullets flex justify-center mt-4"></div>
 
         </section>
         <!--SECTION PRODUTO DESTAQUE-->
         <section>
             <div>
-                <img src="./assets/xicara.svg" alt="imagem xicara com o logo avanti">
+                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti" class="w-full mt-14">
             </div>
             <div>
-                <h4>LOREM IPSUM</h4>
-                <p>Duis consectetur metus nec lacus auctor dignissim. Mauris vitae finibus dui.
-                    Mauris
-                    laoreet lacus ut
-                    eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
-                    pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget
-                    lacinia.
-                    Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
-                    a
-                    libero commodo egestas efficitur id augue.</p>
-                <p>Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
-                    finibus dui. Mauris
-                    laoreet lacus ut
-                    eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
-                    pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget
-                    lacinia.
-                    Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
-                    a
-                    libero commodo egestas efficitur id augue.</p>
+                <div class="text-[#000000] flex flex-col gap-4 mx-6 my-10">
+                    <h4 class="text-2xl font-bold">LOREM IPSUM</h4>
+                    <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
+                        finibus dui.
+                        Mauris
+                        laoreet lacus ut
+                        eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
+                        pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget
+                        lacinia.
+                        Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
+                        a
+                        libero commodo egestas efficitur id augue.</p>
+                    <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
+                        finibus dui. Mauris
+                        laoreet lacus ut
+                        eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
+                        pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget
+                        lacinia.
+                        Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
+                        a
+                        libero commodo egestas efficitur id augue.</p>
+                </div>
+        </section>
+        <section class="bg-[#DEDEDE] px-5 py-7 text-[#000000] mb-14">
+            <img src="./assets/segundo banner.svg" alt="" class="w-full">
+            <h4 class="text-xl font-bold text-center my-5">LOREM IPSUM</h4>
+            <div class="flex flex-col gap-5">
+                <div class="flex items-center gap-4">
+                    <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
+                    <p class="text-xs">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
+                        nascetur
+                        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                </div>
+                <div class="flex items-center gap-4">
+                    <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
+                    <p class="text-xs">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
+                        nascetur
+                        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                </div>
+                <div class="flex items-center gap-4">
+                    <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
+                    <p class="text-xs">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
+                        nascetur
+                        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                </div>
             </div>
         </section>
         <section>
-
-            <h4>LOREM IPSUM</h4>
             <div>
-                <img src="./assets/pin-localização.svg" alt="">
-                <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti" class="w-full mt-14">
             </div>
             <div>
-                <img src="./assets/pin-localização.svg" alt="">
-                <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
-            </div>
-            <div>
-                <img src="./assets/pin-localização.svg" alt="">
-                <p>Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-                    mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
-            </div>
-            <img src="./assets/segundo banner.svg" alt="">
+                <div class="text-[#000000] flex flex-col gap-4 mx-6 my-10">
+                    <h4 class="text-2xl font-bold">LOREM IPSUM</h4>
+                    <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
+                        finibus dui.
+                        Mauris
+                        laoreet lacus ut
+                        eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
+                        pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget
+                        lacinia.
+                        Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
+                        a
+                        libero commodo egestas efficitur id augue.</p>
+                    <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
+                        finibus dui. Mauris
+                        laoreet lacus ut
+                        eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
+                        pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget
+                        lacinia.
+                        Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
+                        a
+                        libero commodo egestas efficitur id augue.</p>
+                </div>
         </section>
+
         <section>
             <img src="./assets/img-rodape.svg" alt="">
             <p>
-                Entre em contato
-                conosco e
-                verifique a disponibilidade para sua região!
+                Entre em contato conosco e verifique a disponibilidade para sua região!
             </p>
         </section>
     </main>
